data base connected

--- a/package.json
+++ b/package.json
@@ -1,9 +1,28 @@
 {
   "dependencies": {
+    "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.15"
-  }
+  },
+  "name": "mini",
+  "description": "merchant center",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Nandi-exl/merhcant_api.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Nandi-exl/merhcant_api/issues"
+  },
+  "homepage": "https://github.com/Nandi-exl/merhcant_api#readme"
 }
