add authorization and jwt token

--- a/.env
+++ b/.env
@@ -2,7 +2,13 @@
 PORT = 5000
 
 #database
-host = 'localhost'
-user = 'root'
-password = 'Rikimaru354'
-database = 'merchant'
+DB_HOST = localhost
+DB_PORT = 3306
+DB_USER = root
+DB_PASSWORD = Rikimaru354
+MYSQL_DATABASE = merchant
+
+#token
+ACCESS_TOKEN_SECRET = wTqfKd010WZhyD5RUK9x
+REFRESH_TOKEN_SECRET = RVVgr9LqtAn3MIC1mN8E
+KEY = qwe1234
